test/Parse/inverse_escapable_feature.swift
// RUN: %target-typecheck-verify-swift -enable-experimental-feature NoncopyableGenerics



struct S: ~Escapable {} // expected-error {{type '~Escapable' requires -enable-experimental-feature NonescapableTypes}}
